--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
   "proxy": "http://localhost:5000",
   "devDependencies": {
     "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1"
